<resources>
    <string name="app_name">OTTO</string>
    <string name="bgImage">Background Image</string>
    <string name="placeholderEmail">Email</string>
    <string name="imageView">Image View</string>
    <string name="PlaceholderPassword">Password</string>
    <string name="login">LOGIN</string>
    <string name="signup">Sign Up</string>
    <string name="signUpIntro">Don\'t have an account with us ?</string>
    <string name="signin">Sign In</string>
    <string name="forgotpassword">Forgot Password ?</string>
    <string name="signupQuestion">Don\'t have an account?</string>
    <string name="signupC">SIGN UP</string>
    <string name="or">OR</string>
    <string name="subSignUp">and book amazing rides.</string>
    <string name="name">Name</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="forgotpasswordsubtext">You can reset your password here.</string>
    <string name="hello">Hello,</string>
    <string name="bookaride">Let\'s book a ride.</string>
    <string name="pickup">Pick up date</string>
    <string name="returndate">Return date</string>
    <string name="availablecar">Available Cars</string>
    <string name="booknow">Book Now</string>
    <string name="addionalKey">Additional Key ($10)</string>
    <string name="gloves">Driving Gloves ($10)</string>
    <string name="childSeat">Child Seat ($70)</string>
    <string name="addons">Add Ons</string>
    <string name="pickupLocation">PICKUP LOCATION</string>
    <string name="selectaddons">Select Add Ons</string>
    <string name="Review">Review</string>
    <string name="navigation_drawer_open">Open Navigation Bar</string>
    <string name="navigation_drawer_close">Close Navigation Bar</string>
    <string name="homeSide">Home</string>
    <string name="profileSide">Profile</string>
    <string name="historySide">Order\'s History</string>
    <string name="shareSide">Share</string>
    <string name="logoutSide">Logout</string>
    <string name="othersSide">Others</string>
    <string name="finalReview">Final Review</string>
    <string name="car">Car</string>
    <string name="date">Selected Dates</string>
    <string name="selectedAddOns">Selected Add Ons</string>
    <string name="selectedLocation">Selected Location</string>
    <string name="proceedToBook">Proceed to Book</string>
    <string name="confirmation">Payment Confirmation</string>
    <string name="payAtPickup">PAY AT PICKUP</string>
    <string name="payUsingPaypal">PAY USING PAYPAL</string>
    <string name="confirmed">Confirmed</string>
    <string name="goToHome">Go To Home</string>
    <string name="book">BOOK</string>
    <string name="carTrans">cart</string>
    <string name="add_ons">ADD ONS</string>
    <string name="vehicle">VEHICLE</string>
    <string name="unlimitedkilometers">Unlimited Kilometers</string>
    <string name="included">Included</string>
    <string name="taxes">TAXES</string>
    <string name="pvrt">PVRT</string>
    <string name="vlcrec">VLF</string>
    <string name="gst">GOODS AND SVCS TAX (5.0%)</string>
    <string name="pst">PST (7.0%)</string>
    <string name="finalWord">FINAL</string>

    <string-array name="pickuplocations">
        <item>Surrey</item>
        <item>South Burnaby</item>
        <item>Metrotown</item>
        <item>Coquitlam</item>
        <item>Port Coquitlam</item>
        <item>Newton</item>
        <item>Vancouver</item>
        <item>Richmond</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="mapLocation">Location</string>
    <string name="title_activity_taxex_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "<b>Passenger Vehicle Rental Tax (PVRT)</b>"
        "<ul>"
        "<li>PVRT is charged at a rate of $1.50/day.</li>"
        "<li>PVRT is not charged if the rental period is eight consecutive hours or less.</li>"
        "<li>PVRT is not charged if the rental period is more than 28 consecutive days.</li>"
        "<li>GST applies to the PVRT daily rate.</li>"
        "</ul><b>\nVehicle Licensing Fee</b>"
        "\nThis fee is for Quick Rental recovery of the proportionate amount of vehicle registration, licensing and related fees applicable to a rental."
    </string>
    <string name="action_settings">Settings</string>
    <string name="bookingconfirmed">Booking Confirmed</string>
    <string name="booking">Bookings</string>
    <string name="upcoming">• UPCOMING •</string>
    <string name="ongoing">• ONGOING •</string>
    <string name="completedTrip">• COMPLETED •</string>

    <string name="currentbookings">Current Bookings</string>
    <string name="yourlocation">Your Location</string>
    <string name="filterByCarType">Filter by Car Type</string>
    <string name="bookingdetails">Booking Details</string>
    <string name="titleWelcome">OTTO Welcomes you</string>
    <string name="feedback">How was your experience ?</string>
    <string name="noreservations">No Reservations Found For Selected Location</string>
    <string name="issueCar">Issue Car</string>
    <string name="dlNumber">Please enter DL Number</string>
    <string name="rentersTermsInfo">Please show renter all terms</string>
    <string name="termAccept">Are the terms accepted ?</string>
    <string name="termandconditions"><![CDATA[Terms & Conditions]]></string>
    <string name="fuelLevel">Please select the fuel level</string>
    <string name="processrerturn">Process Return</string>
    <string name="checkFollowing">Please check the following.</string>
    <string name="fuelReturn">Same Fuel Index</string>
    <string name="noDamage">No Damage</string>
    <string name="feedbackDetails">If any thing is uncheck please right the details here.</string>
    <string name="feedbackWord">Feedback</string>
    <string name="processreturn">Process Return</string>
    <string name="ratingTitle">Please rate the booking (The greater the better)</string>
    <string name="noAddons">No Addons were given.</string>
    <string name="takepayment">Take Payment</string>
    <string name="issuecar">ISSUE CAR</string>
    <string name="processreturnword">PROCESS RETURN</string>
    <string name="cancel">Cancel</string>
    <string name="needroadsideass">Need RoadSide Assistance</string>
    <string name="sharerecipt">Share Receipt</string>

</resources>