<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0F1C3E"
    tools:context=".PreAuth.SignUp">

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rrarrow"
        android:elevation="5dp"
        android:fontFamily="@font/lato"
        android:stateListAnimator="@null"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#eaeaea"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:hint="@string/name"
        android:inputType="text"
        android:textColor="#eaeaea"
        android:textColorHint="#eaeaea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWishes" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#eaeaea"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:hint="@string/placeholderEmail"
        android:inputType="textEmailAddress"
        android:textColor="#eaeaea"
        android:textColorHint="#eaeaea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#eaeaea"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:hint="@string/PlaceholderPassword"
        android:inputType="textPassword"
        android:textColor="#eaeaea"
        android:textColorHint="#eaeaea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <ImageView
        android:id="@+id/imageViewSkyline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bgImage"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/skl" />

    <TextView
        android:id="@+id/textViewWishes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="204dp"
        android:fontFamily="@font/lato"
        android:text="@string/signup"
        android:textColor="#eaeaea"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/lato"
        android:text="@string/subSignUp"
        android:textColor="#eaeaea"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWishes" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewUserImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/imageView"
        android:src="@drawable/mf"
        app:civ_border_color="#ffffff"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>